started fixing job post form

--- a/views/jobpost.handlebars
+++ b/views/jobpost.handlebars
@@ -49,7 +49,7 @@
     <div class="field">
         <label class="label is-medium">Job Title:</label>
         <div class="control has-icons-left has-icons-right">
-            <input class="input is-medium" type="email" placeholder="Job Title">
+            <input class="input is-medium jobtitleInput" type="email" placeholder="Job Title">
             <span class="icon is-small is-left">
                 <i class="fas fa-envelope fa-xs"></i>
             </span>
@@ -59,24 +59,11 @@
         </div>
     </div>
 
-    <div class="field">
-        <label class="label is-medium">Company:</label>
-        <div class="control has-icons-left has-icons-right">
-            <input class="input is-medium" type="email" placeholder="Company">
-            <span class="icon is-left">
-                <i class="fas fa-envelope fa-sm"></i>
-            </span>
-            <span class="icon is-right">
-                <i class="fas fa-check fa-sm"></i>
-            </span>
-        </div>
-    </div>
-
     
     <div class="field">
         <label class="label">Job Description:</label>
         <div class="control">
-            <textarea class="textarea" placeholder="Textarea"></textarea>
+            <textarea class="textarea jobdescriptionInput" placeholder="Textarea"></textarea>
         </div>
     </div>
 
@@ -85,7 +72,7 @@
     <div class="field">
         <label class="label is-medium">Contact Phone:</label>
         <div class="control has-icons-left has-icons-right">
-            <input class="input is-medium" type="email" placeholder="Normal">
+            <input class="input is-medium jobphoneInput" type="email" placeholder="Normal">
             <span class="icon is-medium is-left">
                 <i class="fas fa-envelope"></i>
             </span>
@@ -95,7 +82,7 @@
         </div>
     </div>
 
-  <div class="dropdown">
+  <div class="dropdown is-hoverable">
     <div class="dropdown-trigger">
         <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
         <span>Job Type</span>
@@ -106,10 +93,10 @@
     </div>
   <div class="dropdown-menu" id="dropdown-menu" role="menu">
     <div class="dropdown-content">
-      <a href="#" class="dropdown-item" value="ft">
+      <a class="dropdown-item type-option" data-value="ft">
         Full-Time
       </a>
-      <a class="dropdown-item" value="pt">
+      <a class="dropdown-item type-option" data-value="pt">
         Part-Time
       </a>
     </div>
@@ -119,11 +106,11 @@
     <div class="field">
         <label class="label is-medium">Job Wage:</label>
         <div class="control has-icons-left has-icons-right">
-            <input class="input is-medium" type="email" placeholder="Wage">
+            <input class="input is-medium jobwageInput" type="email" placeholder="Wage">
     </div>
 
 
     <div class="control">
-        <button class="button is-primary is-medium">Submit</button>
+        <button class="button is-primary is-medium job-submit">Submit</button>
       </div>
 </section>
