--- a/views/managerpage.handlebars
+++ b/views/managerpage.handlebars
@@ -26,7 +26,7 @@
                     Post a Job
                 </a>
 
-                <a class="navbar-item" href="">
+                <a class="navbar-item" href="/manager/{{manager.id}}/jobs">
                     View Your Listings
                 </a>
             </div>
