--- a/views/jobpost.handlebars
+++ b/views/jobpost.handlebars
@@ -82,25 +82,15 @@
         </div>
     </div>
 
-  <div class="dropdown is-hoverable">
-    <div class="dropdown-trigger">
-        <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
-        <span>Job Type</span>
-        <span class="icon is-small">
-            <i class="fas fa-angle-down" aria-hidden="true"></i>
-        </span>
-        </button>
-    </div>
-  <div class="dropdown-menu" id="dropdown-menu" role="menu">
-    <div class="dropdown-content">
-      <a class="dropdown-item type-option" data-value="ft">
+<div class="control">
+    <label class="radio">
+        <input type="radio" name="answer" value="ft">
         Full-Time
-      </a>
-      <a class="dropdown-item type-option" data-value="pt">
-        Part-Time
-      </a>
-    </div>
-  </div>
+        </label>
+    <label class="radio">
+        <input type="radio" name="answer" value="pt">
+            Part-Time
+    </label>
 </div>
 
     <div class="field">
