--- a/views/jobindex.handlebars
+++ b/views/jobindex.handlebars
@@ -17,7 +17,7 @@
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <div class="buttons">
-                            <a class="button is-primary">
+                            <a class="button is-primary" href='/profile'>
                                 <strong>Profile</strong>
                             </a>
                             <a class="button is-light">
