updated nav links for managers

--- a/views/managerjobs.handlebars
+++ b/views/managerjobs.handlebars
@@ -18,15 +18,15 @@
                   Home
                 </a>
           
-                <a class="navbar-item">
+                <a class="navbar-item" href="/profile">
                     Profile
                 </a>
 
-                <a class="navbar-item" href="#">
+                <a class="navbar-item" href="/job/create">
                     Post a Job
                 </a>
 
-                <a class="navbar-item">
+                <a class="navbar-item" href="#">
                     View Your Listings
                 </a>
             </div>
