--- a/views/jobpost.handlebars
+++ b/views/jobpost.handlebars
@@ -18,7 +18,7 @@
                   Home
                 </a>
           
-                <a class="navbar-item">
+                <a class="navbar-item" href="/profile">
                     Profile
                 </a>
 
@@ -26,7 +26,7 @@
                     Post a Job
                 </a>
 
-                <a class="navbar-item">
+                <a class="navbar-item" href="/manager/{{manager.id}}/jobs">
                     View Your Listings
                 </a>
             </div>
