--- a/views/managerpage.handlebars
+++ b/views/managerpage.handlebars
@@ -18,7 +18,7 @@
                   Home
                 </a>
           
-                <a class="navbar-item">
+                <a class="navbar-item" href="#">
                     Profile
                 </a>
 
