started writing delete job route and also started profile layout

--- a/views/partials/jobs/jobsmanager.handlebars
+++ b/views/partials/jobs/jobsmanager.handlebars
@@ -17,8 +17,12 @@
                 </div>
 
                 <div class= "panel-block">
-                    <button class= "button is-primary is-fullwidth job-edit" data-id="{{id}}">
+                    <button class= "button is-primary job-edit" data-id="{{id}}">
                         Edit Job
+                    </button>
+
+                    <button class= "button is-primary job-delete" data-id="{{id}}">
+                        Delete Job
                     </button>
 
                 </div>
