--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Helping Hands</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-        <link rel="icon" href="../public/images/favicon.ico">
+        <link rel="icon" href="../images/favicon.ico">
         <link rel="stylesheet" href="/css/style.css">
     </head>
 
