--- a/views/jobpost.handlebars
+++ b/views/jobpost.handlebars
@@ -26,7 +26,7 @@
                     Post a Job
                 </a>
 
-                <a class="navbar-item">
+                <a class="navbar-item" href='/manager/{{id}}/jobs'>
                     View Your Listings
                 </a>
             </div>
