--- a/views/jobdetails.handlebars
+++ b/views/jobdetails.handlebars
@@ -1,6 +1,6 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item" href="https://next-step-employment-app.herokuapp.com/">
+                <a class="navbar-item" href="/">
                     <img src="/images/Logo.png" width="112" height="28">
                 </a>
 
