add styiling to index and jobs handlebars as well as adding correct semantic tags for each element

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,25 +1,24 @@
 <section class="hero is-bold">
     <div class="hero-body">
         <div class="container has-text-centered">
-            <div class="columns">
+            <div id="hero-text" class="columns">
                 <div class="column">
-                    <h1 class="title">
-                        Helping Hands
-                    </h1>
+                    <img src="../images/Logo.png" alt="">
                     <h2 class="subtitle">
-                        Providing a hand to those who need it most
+                        Life is a journey and sometimes we just need a little help to make that next step in it.
                     </h2>
                 </div>
                 <div class="column login-div">
                     <h3>Mission Statement</h3>
-                    <p>Many jobs are out of reach for those who experience homelessness. We help connect those in our
-                        society who are less fortunate with companies and organizations that are willing to give people
-                        a hand to help them back onto their feet by providing a direct link between them.</p>
+                    <p>Many jobs are out of reach for those who experience homelessness. Our Goal is to help connect those in our
+                        society who need it with companies and organizations that are willing to give people
+                        a hand to help them back onto their feet.</p>
                     <div>
                         <button id="viewjobs" class="button is-large">View Jobs</button>
                     </div>
                     <div id="company-login-div">
-                        <h3>Company/Organizations:</h3>
+                        <h3>Want to help support our mission?</h3>
+                        <p>Sign up for an account or login in and post a job</p>
                         <button id="login" class="button">Log In</button>
                         <button id="signup" class="button">Sign Up</button>
                     </div>
@@ -243,7 +242,7 @@
 <footer class="footer">
     <div class="content has-text-centered">
         <p>
-            Copyright 2020 by Team 2
+            Copyright 2020 by Next Step
         </p>
     </div>
 </footer>
