--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,13 +2,13 @@
     <div class="hero-body">
         <div class="container has-text-centered">
             <div id="hero-text" class="columns">
-                <div class="column">
+                <div class="column is-7">
                     <img src="../images/Logo.png" alt="">
                     <h2 class="subtitle">
                         Life is a journey and sometimes we just need a little help to make that next step in it.
                     </h2>
                 </div>
-                <div class="column login-div">
+                <div class="column login-div is-5">
                     <h3>Mission Statement</h3>
                     <p>Many jobs are out of reach for those who experience homelessness. Our Goal is to help connect those in our
                         society who need it with companies and organizations that are willing to give people
