added the navbar hamburger function in javascript

--- a/views/managerpage.handlebars
+++ b/views/managerpage.handlebars
@@ -53,8 +53,8 @@
         <div class= "user-profile">
 
             <div class= "view-profile">
-
-            <div class= "card manager-profile">
+<div class="columns">
+        <div class= "card manager-profile column is-10 is-offset-1">
                 <div class="columns">
                         <div class="column is-10 is-offset-1 manager-title">
                             Your Manager Profile
@@ -119,8 +119,10 @@
                 </div>
             </div>
         </div>
-        </div>
+      </div>
+      </div>
     </div>
+    
 
             <div class= "edit-profile">
 
