--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,6 +91,7 @@
 
 .card-header-title {
     font-size: 25px;
+    margin-bottom: 10px;
 }
 
 .manager-title {
@@ -132,8 +133,8 @@
 @media only screen and (max-width: 768px) {
 
     .manager-profile {
-        padding-left: 5px;
-        padding-right: 5px;
+        margin-left: 10px;
+        margin-right: 10px;
     }
     
   }
