touch ups on profile layout

--- a/views/managerpage.handlebars
+++ b/views/managerpage.handlebars
@@ -45,7 +45,7 @@
 
 <div class="container">
     
-        <div class= "card-header-title">
+        <div class= "card-header-title profile-category manager-welcome">
             Welcome, {{manager.first_name}} {{manager.last_name}}  
             
         </div>
@@ -58,6 +58,7 @@
                 <div class="columns">
                         <div class="column is-10 is-offset-1 manager-title">
                             Your Manager Profile
+                            <hr>
                         </div>
                     </div>
 
