--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,9 +89,10 @@
     display: none;
 }
 
-.card-header-title {
+.manager-welcome {
     font-size: 25px;
-    margin-bottom: 10px;
+    font-weight: bold;
+    margin-bottom: 15px;
 }
 
 .manager-title {
