--- a/views/jobindex.handlebars
+++ b/views/jobindex.handlebars
@@ -40,7 +40,9 @@
 <div class="container">
 
     <div id="job-header">
-        <h1><strong>Who's Hiring?</strong></h1>
+        <div class="page-title">
+        Post a New Job
+    </div>
         <p>These companies and organizations are currently looking for help</p>
 
         <div class="dropdown is-hoverable">
