--- a/views/managerjobs.handlebars
+++ b/views/managerjobs.handlebars
@@ -47,7 +47,9 @@
 <div class="container">
 
     <div id="job-header">
-        <h1>Job Index</h1>
+        <div class="page-title">
+            Your Posted Jobs
+        </div>
     </div>
 
 
