--- a/views/managerpage.handlebars
+++ b/views/managerpage.handlebars
@@ -56,7 +56,7 @@
 <div class="columns">
         <div class= "card manager-profile column is-10 is-offset-1">
                 <div class="columns">
-                        <div class="column is-10 is-offset-1 manager-title">
+                        <div class="column is-10 is-offset-1 page-title">
                             Your Manager Profile
                             <hr>
                         </div>
