--- a/views/partials/jobs/jobsmanager.handlebars
+++ b/views/partials/jobs/jobsmanager.handlebars
@@ -9,14 +9,14 @@
                 </div>
 
                 <div class="panel-block">
-                    <strong>Type: </strong>{{type}}
+                    <strong>Type:</strong> {{type}}
                 </div>
 
                 <div class= "panel-block">
-                    <strong>Wage: </strong>{{wage}}
+                    <strong>Wage:</strong> {{wage}}
                 </div>
 
-                <div class= "panel-block">
+                <div class= "panel-block buttons managerjob-buttons">
                     <button class= "button is-primary job-edit" data-id="{{id}}">
                         Edit Job
                     </button>
