--- a/views/jobpost.handlebars
+++ b/views/jobpost.handlebars
@@ -46,15 +46,18 @@
 
 <section class="container">
 
-    <div class="field">
-        <label class="label is-medium">Job Title:</label>
+    <div class="page-title">
+        Post a New Job
+    </div>
+
+  <div class= "columns">
+      <div class= "column is-10 is-offset-1 card">
+          <div class="field">
+        <label class="label">Job Title:</label>
         <div class="control has-icons-left has-icons-right">
-            <input class="input is-medium jobtitleInput" type="email" placeholder="Job Title">
+            <input class="input jobtitleInput" type="email" placeholder="Job Title">
             <span class="icon is-small is-left">
-                <i class="fas fa-envelope fa-xs"></i>
-            </span>
-            <span class="icon is-small is-right">
-                <i class="fas fa-check fa-xs"></i>
+                <i class="fas fa-briefcase"></i>
             </span>
         </div>
     </div>
@@ -63,44 +66,89 @@
     <div class="field">
         <label class="label">Job Description:</label>
         <div class="control">
-            <textarea class="textarea jobdescriptionInput" placeholder="Textarea"></textarea>
+            <textarea class="textarea jobdescriptionInput" placeholder="Write a description of the job here."></textarea>
         </div>
     </div>
 
 
 
     <div class="field">
-        <label class="label is-medium">Contact Phone:</label>
+        <label class="label">Contact Phone:</label>
         <div class="control has-icons-left has-icons-right">
-            <input class="input is-medium jobphoneInput" type="email" placeholder="Normal">
-            <span class="icon is-medium is-left">
-                <i class="fas fa-envelope"></i>
-            </span>
-            <span class="icon is-medium is-right">
-                <i class="fas fa-check"></i>
+            <input class="input jobphoneInput" type="email" placeholder="Phone Number">
+            <span class="icon is-small is-left">
+                <i class="fas fa-phone"></i>
             </span>
         </div>
     </div>
 
-<div class="control">
-    <label class="radio">
-        <input type="radio" name="answer" value="ft">
-        Full-Time
+<div class= "columns">
+    <div class="column is-6">
+    <div class="control">
+     <div class="field is-horizontal">
+  <div class="field-label">
+    <label class="label">Job Type:</label>
+  </div>
+  <div class="field-body">
+    <div class="field is-narrow">
+      <div class="control">
+        <label class="radio">
+          <input type="radio" name="answer" value="ft">
+          Full-Time
         </label>
-    <label class="radio">
-        <input type="radio" name="answer" value="pt">
-            Part-Time
-    </label>
+        <label class="radio">
+          <input type="radio" name="answer" value="pt">
+          Part-Time
+        </label>
+      </div>
+      </div>
+      </div>
+    </div>
+</div>
+</div>
+    
+
+ 
+<div class= "column is-6">
+      <div class="control">
+          <div class="field is-horizontal">
+            <div class="field-label is-normal">
+                <label class="label">Job Wage:</label>
+            </div>
+        <div class="field-body">
+             <div class="control has-icons-left">
+            <input class="input jobwageInput" type="email" placeholder="Wage">
+             <span class="icon is-small is-left">
+                <i class="fas fa-dollar-sign"></i>
+            </span>
+                </div>
+        </div>
+       
+          
+      </div>
+    </div>
+  </div>
 </div>
 
-    <div class="field">
-        <label class="label is-medium">Job Wage:</label>
-        <div class="control has-icons-left has-icons-right">
-            <input class="input is-medium jobwageInput" type="email" placeholder="Wage">
-    </div>
 
-
-    <div class="control">
+ <div class="control">
         <button class="button is-primary is-medium job-submit">Submit</button>
       </div>
+
+
+</div>
+  
+
+    
+
+
+   
+
+
+
+    </div>
+</div>
+
 </section>
+
+    
