--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,28 @@
 .button.is-primary:hover {
     background-color: #63a0b7;
 }
+.button.is-link {
+    background-color: #97d9d9;
+    color: #000c20;
+}
+
+.button.is-link:hover {
+    background-color: #63a0b7;
+    color: #000c20;
+}
+.button.is-link.is-light {
+    
+    color: #000c20;
+}
+
+.button.is-link.is-light:hover {
+    
+    color: #000c20;
+}
+
+.modal-close:hover {
+    background-color: #c9072a;
+}
 
 .footer {
     background-color: #000c20;
@@ -129,6 +151,44 @@
    -webkit-line-clamp: 2; /* number of lines to show */
    -webkit-box-orient: vertical;
 }
+
+/* JOb detail styling */
+#job-detail-card {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+}
+#job-detail-card p {
+    padding-top: 10px;
+}
+
+
+
+#job-title {
+    font-size: 25px;
+
+}
+
+#job-info {
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+#job-manager {
+    padding-left: 16px;
+    padding-right: 16px;
+}
+#job-manager h2{
+    font-size: 20px;
+}
+#job-manager button {
+    display: block;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+}
 /* use this for media breakpoints */
 
 @media only screen and (max-width: 768px) {
@@ -137,5 +197,7 @@
         margin-left: 10px;
         margin-right: 10px;
     }
-    
+    #job-detail-card {
+        width: 90%;
+    }
   }
