job posting and edit code fix

--- a/views/jobindex.handlebars
+++ b/views/jobindex.handlebars
@@ -25,8 +25,8 @@
                                 Logout
                             </a>
                             {{else}}
-                            <a class="button is-light" href='/'>
-                                Log in
+                            <a class="button is-light navbar-login">
+                                Log In
                             </a>
                             {{/if}}
                         </div>
