--- a/views/jobpostedit.handlebars
+++ b/views/jobpostedit.handlebars
@@ -49,7 +49,7 @@
     <div class="field">
         <label class="label is-medium">Job Title:</label>
         <div class="control has-icons-left has-icons-right">
-            <input class="input is-medium" type="email" placeholder= "Job Title" value={{title}}>
+            <input class="input is-medium" type="email" placeholder= "Job Title" value={{job.title}}>
             <span class="icon is-small is-left">
                 <i class="fas fa-envelope fa-xs"></i>
             </span>
@@ -89,14 +89,14 @@
     <div class="field">
         <label class="label">Job Description:</label>
         <div class="control">
-            <textarea class="textarea" placeholder="Textarea" value= {{description}}></textarea>
+            <textarea class="textarea" placeholder="Textarea" value= {{job.description}}></textarea>
         </div>
     </div>
 
     <div class="field">
         <label class="label is-medium">Job Type:</label>
         <div class="control has-icons-left has-icons-right">
-            <input class="input is-medium" type="email" placeholder="Type of Job" value={{type}}>
+            <input class="input is-medium" type="email" placeholder="Type of Job" value={{job.type}}>
         </div>
     </div>
 
@@ -124,7 +124,7 @@
     <div class="field">
         <label class="label is-medium">Job Wage:</label>
         <div class="control has-icons-left has-icons-right">
-            <input class="input is-medium" type="email" placeholder="Wage" value={{wage}}>
+            <input class="input is-medium" type="email" placeholder="Wage" value={{job.wage}}>
     </div>
 
 
