minor style changes to overall look

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,6 +62,12 @@
 .dropdown-content {
     background-color: rgb(211, 211, 211, 0.8);
 }
+
+.container {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
 /* Indexpage styling */
 .hero {
     background-image: url('../images/hero.png');
@@ -101,6 +107,7 @@
 .jobs-column {
     flex-wrap: wrap;
     max-width: 90%;
+    padding-left: 80px;
 }
 
 .companyForm {
@@ -136,6 +143,7 @@
 /* Job Listing Page Styling */
 #job-header {
     text-align: center;
+    font-size: 30px;
 }
 
 .dropdown {
@@ -188,6 +196,9 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 10px;
+}
+.contact-manager {
+    background-color: #97d9d9;
 }
 /* use this for media breakpoints */
 
