changed job title color and formatting for manager jobs

--- a/views/partials/jobs/jobsmanager.handlebars
+++ b/views/partials/jobs/jobsmanager.handlebars
@@ -1,19 +1,19 @@
  <div class= "column is-one-third-desktop is-half-tablet is-full-mobile">
             <div class="panel">
                 <div class="panel-heading">
-                    {{title}}
+                    <p>{{title}}</p>
                 </div>
 
                 <div class="panel-block">
-                    {{description}}
+                   <p class="job-description-short"> {{description}} </p>
                 </div>
 
                 <div class="panel-block">
-                    <strong>Type:</strong> {{type}}
+                    <p><strong>Type: </strong> {{type}}</p>
                 </div>
 
                 <div class= "panel-block">
-                    <strong>Wage:</strong> {{wage}}
+                    <p><strong>Wage: </strong> {{wage}}</p>
                 </div>
 
                 <div class= "panel-block buttons managerjob-buttons">
