--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,9 +64,9 @@
     padding-bottom: 20px;
 }
 
-
 .panel-heading {
-    background-color: rgb(211, 211, 211, 0.8);
+    background-color: #000c20;
+    color: white;
 }
 
 .dropdown-content {
